res/examples/invalid/fn_expr_type_mismatch_in_body_param_identifier.eg
(a: string): number => { a };

// out: TypeError: mismatched types: expected type `number` but received `string`